--- a/CV/Views/Project/CRM.cshtml
+++ b/CV/Views/Project/CRM.cshtml
@@ -1,15 +1,94 @@
-﻿<div class="hero is-medium is-primary">
-    <div class="hero-body">
-        CRM - 2016
+﻿<div class="hero">
+    <div class="section-margin">
+        <div class="columns">
+            <div class="column">
+                <div class="image is-128x128 auto-margin">
+                    <img class="" src="~/Content/img/crm.png" />
+                </div>
+                <div class="has-text-centered">
+                    <span class="tag">.NET MVC</span>
+                    <span class="tag">Bootstrap</span>
+                    <span class="tag">SQL</span>
+
+                </div>
+            </div>
+            <div class="column auto-margin">
+                <div class="section has-text-justified">
+                    <p> This is the first web application project I was involved in. It was a way to transition from my non-dev to a dev-job.</p>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
 
 <div class="section-margin">
+    <div class="box">
+        <h3 class="title is-3 has-bottom-border">Problem</h3>
+        <p> ITC, my previous employer had an internal CRM system written in Delphi as a desktop application. This was problematic due to compatibility issues with running the application on different platforms. </p>
+    </div>
+
+    <div class="box is-shadowless is-transparent has-text-centered">
+        <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
+    </div>
+
+    <div class="box">
+        <h3 class="title is-3 has-bottom-border">Solution</h3>
+        <p> Rewrite the application as a web application. We converted the database to an MSSQL database and went from there.</p>
+    </div>
+
+    <div class="box is-shadowless is-transparent has-text-centered">
+        <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
+    </div>
+
+    <div class="box">
+        <h3 class="title is-3 has-bottom-border">What I learned</h3>
+        <div class="content">
+            <h6 class="title is-6">Digging deep with Xamarin.Forms </h6>
+            <p>
+                One of the biggest reason for creating this mobile app was to enhance my understanding further about Xamarin.Forms. I was in the middle of completing a Xamarin.Forms projects and I wanted to learn more about it to enhance my understanding.
+                Building this app definitely served that purpose and I was able to
+            </p>
+        </div>
+
+        <div class="content">
+            <h6 class="title is-6">Getting my feet wet with .NET Web API from scratch</h6>
+            <p>
+                This was a really good way of getting myself more familiar on how .NET Web API works from scratch. It was good to see its functionality and potential in comparison to .NET MVC 5.
+            </p>
+        </div>
+
+        <div class="content">
+            <h6 class="title is-6">Scope creep is a real thing</h6>
+            <p>
+                The original purpose of this project was quite basic - find out who has paid for the casual sessions and calculate the total amount for permanent players at the end of the term.
+                Realistically, I could have just created an Excel spreadsheet and it would have been done in a couple of hours. But where's the fun in that?
+            </p>
+
+            <p>
+                I started thinking it would be nice to record the attendances so I implemented an attendance module. Then I started to think about how it would be cool to have the application automatically send out notifications to players. And then I got into thinking how it would be cool to integrate my other personal ideas into this app etc. etc. etc.
+                I then realised that this is what they talk about when they say scope creep. Unfortunately, I didn't get to utilise my app since I stopped basketball altogether. I have every intention on finishing it.
+            </p>
+
+        </div>
+
+
+    </div>
+
+    <div class="has-text-centered">
+        <a class="button">
+            <span class="icon"><i class="fab fa-github"></i></span>
+            <span>View on GitHub</span>
+        </a>
+    </div>
+</div>
+
+@*<div class="section-margin">
     <div class="tile is-ancestor">
         <div class="tile is-6 is-parent">
             <div class="tile is-child box">
                 <p class="title">Overview</p>
-                <p> This is the first web application project I was involved in. It was a way to transition from my non-dev to a dev-job. </p>
+                <p>  </p>
             </div>
 
         </div>
@@ -47,7 +126,7 @@
 
         </div>
     </div>
-</div>
+</div>*@
 
 
 @*<div>
