--- a/CV/Views/Project/ThisProject.cshtml
+++ b/CV/Views/Project/ThisProject.cshtml
@@ -1,180 +1,87 @@
-﻿
+﻿<div class="hero is-small has-bottom-border is-project">
+    @*<div class="image is-128x128 is-div-centered level-item">
+            <img class="" src="~/Content/img/NFTB.png" />
+        </div>
+        <div class="has-text-centered">
+            NFTB - 2018
+        </div>*@
+    <div class="section-margin">
+        <div class="columns">
+            <div class="column">
+                <div class="image is-128x128 auto-margin">
+                    <img class="" src="~/Content/img/thisProject.png" />
+                </div>
+                <div class="has-text-centered">
+                    <span class="tag">.NET MVC</span>
+                    <span class="tag">Bulma CSS</span>
+                    <span class="tag">VueJS</span>
+
+                </div>
+            </div>
+            <div class="column auto-margin">
+                <div class="section has-text-justified content">
+                    <p> It was time to be part of the cool kids and make myself a personal website. this.Project (being this project that you're looking at right now) was created so I can stand out more to potential employers like yourself </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<div class="section-margin">
+    <div class="box section">
+        <h3 class="title is-3 has-bottom-border">Problem</h3>
+        <p>
+            Before I found my current job, I had difficulty finding a job for several reasons (I think these were the reasons):
+        </p>
+        <ul>
+            <li>I did not have any commercial experience.</li>
+            <li>I was not considred as a graduate so nobody would take me as a graduate</li>
+            <li>I'm asian (I DID NOT JUST SAY THAT!)</li>
+        </ul>
+    </div>
+
+    <div class="box is-shadowless is-transparent has-text-centered">
+        <i class="fas fa-arrow-alt-circle-down has-thisproject-color is-size-3"></i>
+    </div>
+
+    <div class="box section">
+        <h3 class="title is-3 has-bottom-border">Solution</h3>
+        <p> I need to stand out enough to get YOUR attention. This site was a good way for me to show who I am (because that is more important than skills) without having a 3 page long CV.  </p>
+        <p> This site is also my sandpit to be able to play around with technologies that I want to play with. I can use this site as a template for future projects that require similar technologies.  </p>
+
+    </div>
+
+    <div class="box is-shadowless is-transparent has-text-centered">
+        <i class="fas fa-arrow-alt-circle-down has-thisproject-color is-size-3"></i>
+    </div>
+
+    <div class="box section">
+        <h3 class="title is-3 has-bottom-border">What I learned</h3>
+        <div class="content">
+            <h6 class="title is-6">Understanding what's under the hood is a good way to learn... at a certain point</h6>
+            <p>
+                One of my intentions for this projects is to avoid using well known CSS and JS libraries. It sounds crazy but I really wanted to get up close with these technologies in their purest form.
+            </p>
+            <p>
+                Unfortunately, this took WAY too long and I wanted to finish up the project so I could start applying for jobs. This time constraint has been unfortunate because I had to clunk in ***VERY UGLY*** code.
+                I am a big fan of 'do it once do it right' but this has not been the case for this project. As mentioned, this is my sandbox so I will be constantly updating this so that codebase is exactly how I need/want it to be
+            </p>
+        </div>
+
+        <div class="content">
+            <h6 class="title is-6"></h6>
+
+        </div>
 
 
+    </div>
 
-
-<div class="hero is-medium is-primary">
-    <div class="hero-body">
-        MT4 - 2018
+    <div class="has-text-centered">
         <a class="button">
             <span class="icon"><i class="fab fa-github"></i></span>
             <span>View on GitHub</span>
         </a>
     </div>
 </div>
-
-<div class="section-margin">
-
-    <div class="tile is-ancestor">
-        <div class="tile is-6 is-parent">
-            <div class="tile is-child">
-                <h3 class="title is-3">Overview</h3>
-                <p> Everyone wants to be rich. I am no exception. My good friend and I decided to collaborate. He has been making playing around with his own patterns and thought it would be great to automate his trades</p>
-                <p> MT4 is a programmable forex trading platform. It allows you to create tools </p>
-            </div>
-
-        </div>
-        <div class="tile  is-vertical is-parent">
-            <div class="tile is-child box">
-                <h3 class="title is-3">Problem</h3>
-                <p>
-                    From my limited knowledge, Forex trading comes down to recognising patterns and making trades at the correct time before patters chage. This is both time consuming and could potentially have lost opportunities.
-                </p>
-            </div>
-            <i class="fas fa-arrow-down has-text-centered"></i>
-            <div class="tile is-child box">
-                <h3 class="title is-3">Solution</h3>
-                <p> Build an automated trading robot using their platform. In addition to the trading robot, we needed to be able to backtest the algorithm with real historical data.</p>
-            </div>
-            <i class="fas fa-arrow-down has-text-centered"></i>
-        </div>
-    </div>
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">What I learned</h3>
-        <div class="content">
-            <h6 class="title is-6">I am thankful for VisualStudio and ReSharper ?????</h6>
-            <p>
-                Having the right tools reduces the time it takes to develop. MT4 had their own editor which is pretty basic and it made me appreciate features as simple as "Go to Definition" or having squiggly lines to tell you that you missed a semicolon.
-                I have always thought developing in the most basic tools is the coolest thing (Notepad++) but this has cemented it in my head that people should utilise the right tools for the job to make their lives easier.
-            </p>
-        </div>
-
-        <div class="content">
-            <h6 class="title is-6">Date and time concepts are a pain to deal with</h6>
-            <p>
-                I have known this since I've worked at Blackball Software and the issue comes down to localisation. A system should be able to save and retrive datetime values based on a current user's timezone.
-                Even with the right DateTime extensions at my current job that have been developed overtime still trips me up but developing it in a system where there is no concept of UTC time format deemed a bit difficult.
-                I wanted the automation to account for Daylight Time Savings so there is no need for human intervention at all. I have somewhat come to a solution with the limited functions that the platform provides.
-            </p>
-        </div>
-
-        <div class="content">
-            <h6 class="title is-6">It's sometimes better to reinvent the wheel</h6>
-            <p>
-                MT4 provided a backtesting solution which was great... which I initially thought until the system started falling over with massive amounts of data.
-                The backtest process was slow, the code had to be re-engineered specifically for backtesting, the data that was used was sometimes incomplete - basically it was a mess.
-                So I decided to start backtesting project in C#. That way, I was in a familiar environment and my speed increased significantly
-            </p>
-        </div>
-
-    </div>
-</div>
-
-@*<div>
-        <div class="hero has-mt4-color is-small is-bold">
-            <div class="hero-body section-margin">
-                <h4 class="">CRM</h4>
-            </div>
-        </div>
-
-        <div class="section-margin">
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
-                </div>
-                <div class="column is-10">
-                    <p>
-                        The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
-                    </p>
-                </div>
-            </div>
-
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
-                </div>
-                <div class="column is-10">
-                    <p>
-                        Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
-                    </p>
-                </div>
-            </div>
-
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">Screenshots</h6>
-
-                </div>
-                <div class="column is-10">
-                    <div class="columns">
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    </div>
-                    <div class="columns">
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div>
-        <div class="hero is-info is-small is-bold">
-            <div class="hero-body section-margin">
-                <h4 class="">CRM</h4>
-            </div>
-        </div>
-
-        <div class="section-margin">
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
-                </div>
-                <div class="column is-10">
-                    <p>
-                        The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
-                    </p>
-                </div>
-            </div>
-
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
-                </div>
-                <div class="column is-10">
-                    <p>
-                        Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
-                    </p>
-                </div>
-            </div>
-
-            <div class="columns sub-section-margin">
-                <div class="column is-2">
-                    <h6 class="subtitle is-6 is-italic">Screenshots</h6>
-
-                </div>
-                <div class="column is-10">
-                    <div class="columns">
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    </div>
-                    <div class="columns">
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                        <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>*@
-
-
-
-
-
-
-
