--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -3,22 +3,24 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="shortcut icon" type="image/png" href="/Content/img/EAO.png" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/Content/bulma.css">
+    <link rel="stylesheet" href="~/Content/bulma.min.css">
     <link rel="stylesheet" href="~/Content/modal-fx.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 
     
     @*<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">*@
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:800" rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:800" rel="stylesheet">*@
     <link rel="stylesheet" href="~/Content/x.css">
     <link rel="stylesheet" href="~/Content/fontawesome.css">
 
 
 </head>
 <body>
-<script src="~/Scripts/jquery-3.3.1.js"></script>
-<script src="~/Scripts/vue.js"></script>
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/vue.min.js"></script>
 
 
 @*<div id="navbar">
