--- a/CV/Content/xmylife.css
+++ b/CV/Content/xmylife.css
@@ -5,14 +5,6 @@
     margin-right: 100px;
 }
 
-#section0 {
-    background-image: url('img/me.jpg');
-    /*background-image: url('https://raw.githubusercontent.com/alvarotrigo/fullPage.js/master/examples/imgs/bg2.jpg');*/
-    background-size: cover;
-    background-position: center;
-    /*background-size: 100%;*/
-    background-repeat: no-repeat;
-}
 
 
 
@@ -60,9 +52,9 @@
 }
     */
 
-.timeline .timeline-item .timeline-content {
+/*.timeline .timeline-item .timeline-content {
     padding: 1.5em;
-}
+}*/
 
 .timeline .timeline-item .timeline-content.is-128-high {
     height: 128px;
@@ -87,6 +79,16 @@
     flex-basis: 100%;
     margin-right: 4em;
     margin-left: 0;
+}
+
+.timeline.is-centered .timeline-item:nth-of-type(2n) .timeline-content {
+    padding: 1em;
+    margin-right: 4em;
+}
+
+.timeline.is-centered .timeline-item .timeline-content {
+    padding: 1em;
+    margin-left: 4em;
 }
 
 
