--- a/CV/Views/Home/Landing.cshtml
+++ b/CV/Views/Home/Landing.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="section-margin">
-    <h1 class="title is-1">Hi! Welcome to my page.</h1>
+    <h1 class="title is-1">Hi,  Welcome to my page.</h1>
 </div>
