--- a/CV/Views/Home/MyLife.cshtml
+++ b/CV/Views/Home/MyLife.cshtml
@@ -7,7 +7,7 @@
     <h1 class="title is-1 has-bottom-border"> These are the days of my life </h1>
     <div class="timeline is-centered">
         <header class="timeline-header">
-            <span class="tag is-large is-primary">Start</span>
+            <span class="tag is-large is-dark">Start</span>
         </header>
 
         <timeline-item title="1988" subtitle="Born in Cebu, Philippines where seashells are used for currency"></timeline-item>
@@ -20,11 +20,11 @@
 
         <timeline-item title="2007" subtitle="University [yoo-nuh-vur-si-tee]"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="dancinguni1.jpg" description="I tended to dance more than attend classes during my Uni days. I have matured a lot since then I assure you."></timeline-content>
+        <timeline-content image="dancinguni1.jpg" description="I tended to dance more than attend classes during my Uni days. I have matured a lot since then."></timeline-content>
 
         <timeline-item title="2011" subtitle="Qualified! Got my license to work, pretended I knew what I was doing and got a job"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="grad.jpg" description="I have no idea who these people are... I found them walking on the street so I took a photo with them."></timeline-content>
+        <timeline-content image="grad.jpg" description="No idea who these people are. Found them walking close to me so I took a photo with them."></timeline-content>
 
         <timeline-item title="2014" subtitle="Married my biggest and greatest fan"></timeline-item>
         <div class="timeline-item is-hidden"></div>
@@ -32,13 +32,13 @@
 
         <timeline-item title="2015" subtitle="Visited 38,272,037 ancient churches during a three month excursion in Europe"></timeline-item>
         <div class="timeline-item is-hidden"></div>
-        <timeline-content image="europe1.jpg" description="I have no idea who these people are... I found them walking on the street so I took a photo with them."></timeline-content>
+        <timeline-content image="europe1.jpg" description="My ass in Santorini, Greece"></timeline-content>
 
         <timeline-item title="2018" subtitle="Spawned a poop machine"></timeline-item>
         <div class="timeline-item is-hidden"></div>
         <timeline-content image="rt.jpg" description="Light of my life, apple of my eye."></timeline-content>
         <header class="timeline-header">
-            <span class="tag is-large is-primary">Still going...</span>
+            <span class="tag is-large is-dark">Still going...</span>
         </header>
     </div>
     @*<div class="sub-section-margin has-text-centered">
